SEIRHVD5 SeroPrev Dynamics + Notebook for data fit

--- a/DataFit/SEIRHVD5_DataFit_SeroPrevDynamics.ipynb
+++ b/DataFit/SEIRHVD5_DataFit_SeroPrevDynamics.ipynb
@@ -44,8 +44,9 @@
     "sys.path.insert(1, 'src/SEIRHVD/')\n",
     "sys.path.insert(1, 'src/utils/')\n",
     "\n",
-    "from class_SEIRHUVD4 import SEIRHVD \n",
+    "from class_SEIRHUVD5 import SEIRHVD \n",
     "from Quarantine import Quarantine\n",
+    "from Quarantine import SeroPrevDynamics\n",
     "from importdata import ImportData"
    ]
   },
@@ -66,7 +67,7 @@
     "# First simulation Initial date\n",
     "initdate = datetime(2020,5,15)\n",
     "# Date for change in SeroPrevalence\n",
-    "initdate2 = datetime(2020,8,24)\n",
+    "SPchange_date = datetime(2020,8,24)\n",
     "\n",
     "# Current date\n",
     "currentdate = datetime.now()\n",
@@ -129,28 +130,19 @@
    "outputs": [],
    "source": [
     "# Total simulation time\n",
-    "tsimtot = 1000\n",
+    "tsim = 1000\n",
     "\n",
-    "tsim1 = (initdate2 - initdate).days \n",
-    "tsim2 = tsimtot-tsim1\n",
+    "t_sp = (SPchange_date - initdate).days \n",
+    "\n",
     "\n",
     "beta = 0.13\n",
     "mu = 1.2\n",
-    "k = 0\n",
+    "k_I = 0\n",
+    "k_R = 0\n",
     "\n",
-    "SeroPrevFactor1=0.06\n",
-    "SeroPrevFactor2=0.025\n",
+    "SeroPrevFactor =0.06\n",
     "\n",
     "expinfection=0 # Proportion in which the exposed infect - 0: nothing, 1: equally as Infected"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tsim1"
    ]
   },
   {
@@ -177,7 +169,7 @@
     "max_mob = 0.55\n",
     "rem_mob = 0.45\n",
     "\n",
-    "Q1 = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=tsim1)\n",
+    "Q1 = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=tsim)\n",
     "Q2 = Quarantine(rem_mob)\n",
     "\n",
     "alpha = Q2.alpha"
@@ -206,7 +198,9 @@
    "outputs": [],
    "source": [
     "Imi_det = 1\n",
-    "Ias_det = 0.5"
+    "Ias_det = 0.5\n",
+    "Ise_det = 1\n",
+    "Icr_det = 1"
    ]
   },
   {
@@ -330,6 +324,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## SeroPrevalence Dynamics\n",
+    "The susceptibles increase through a step function which last for the specified amount of days. Throughout these days it adds a \"dailyincrease\" amount of persons each day.\n",
+    "\n",
+    "The total increase of people is increasedays*dailyincrease"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Days for susceptible increase\n",
+    "increasedays = 15\n",
+    "# Daily amount of people \n",
+    "dailyincrease = 2000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case we add 30.000 persons to the simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi = SeroPrevDynamics(t_sp,t_sp+increasedays,dailyincrease)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see the SeroPrev addition in the following plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(range(200),[chi(i) for i in range(200)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Simulation\n",
     "\n",
     "## Initial SeroPrev period\n",
@@ -342,14 +390,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation1 = SEIRHVD(tsim1,beta,mu,alpha,k=k,SeroPrevFactor=SeroPrevFactor1,expinfection=expinfection,RealIC = RM,Imi_det = Imi_det,Ias_det = Ias_det)"
+    "simulation1 = SEIRHVD(tsim,beta,mu,alpha,k_I=k_I,k_R = k_R, chi = chi, SeroPrevFactor=SeroPrevFactor,expinfection=expinfection,RealIC = RM,Imi_det = Imi_det,Ias_det = Ias_det)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting new params"
+    "Modify simulation state parameters"
    ]
   },
   {
@@ -397,24 +445,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation1.integr_sci(0,tsim1,0.1)"
+    "### Setting new params"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simulation 2\n",
-    "Second SeroPrev period"
+    "## Run simulation\n",
+    "\n",
+    "* **integr_sci**: Fast solver, sometimes stiffness beat it  \n",
+    "* **integr:** Slow solver, more robust with stiffness  "
    ]
   },
   {
@@ -423,64 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation2 = SEIRHVD(tsim2,beta,mu,alpha,k=k,SeroPrevFactor=SeroPrevFactor2,Imi_det = Imi_det,Ias_det = Ias_det,SimIC=simulation1,initdate=initdate2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation2.pE_Ias=pE_Ias\n",
-    "simulation2.tE_Ias=tE_Ias\n",
-    "simulation2.pE_Imi=pE_Imi\n",
-    "simulation2.tE_Imi=tE_Imi\n",
-    "simulation2.pE_Icr=pE_Icr\n",
-    "simulation2.tE_Icr=tE_Icr\n",
-    "simulation2.pE_Ise=pE_Ise\n",
-    "simulation2.tE_Ise=tE_Ise\n",
-    "simulation2.pIas_R=pIas_R\n",
-    "simulation2.tIas_R =tIas_R\n",
-    "simulation2.pImi_R=pImi_R\n",
-    "simulation2.tImi_R =tImi_R\n",
-    "simulation2.pIse_Hse=pIse_Hse\n",
-    "simulation2.tIse_Hse=tIse_Hse\n",
-    "simulation2.pIse_D=pIse_D\n",
-    "simulation2.tIse_D=tIse_D\n",
-    "simulation2.pIcr_V=pIcr_V\n",
-    "simulation2.tIcr_V=tIcr_V\n",
-    "simulation2.pIcr_D=pIcr_D\n",
-    "simulation2.tIcr_D=tIcr_D\n",
-    "simulation2.pHse_R=pHse_R\n",
-    "simulation2.tHse_R =tHse_R\n",
-    "simulation2.pHse_V=pHse_V\n",
-    "simulation2.tHse_V=tHse_V\n",
-    "simulation2.pHse_D=pHse_D\n",
-    "simulation2.tHse_D=tHse_D\n",
-    "simulation2.pV_Hout=pV_Hout\n",
-    "simulation2.tV_Hout =tV_Hout\n",
-    "simulation2.pV_D=pV_D\n",
-    "simulation2.tV_D =tV_D\n",
-    "simulation2.pHout_R=pHout_R\n",
-    "simulation2.tHout_R=tHout_R\n",
-    "simulation2.setnewparams()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Run simulation 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation2.integr_sci(0,tsim2,0.1)"
+    "simulation1.integr(0,tsim,0.1)"
    ]
   },
   {
@@ -505,7 +489,7 @@
    "source": [
     "# Days to plot\n",
     "days = 250\n",
-    "t_end = tsim1"
+    "t_end = t_sp"
    ]
   },
   {
@@ -518,13 +502,11 @@
     "axs[0,0].set_xlim(0,days)\n",
     "axs[0,0].scatter(RM.tr,RM.Ir,label='Real Active Data')\n",
     "axs[0,0].plot(simulation1.t,simulation1.I_det,label='Infected')\n",
-    "axs[0,0].plot(simulation2.t+tsim1,simulation2.I_det,label='Infected')\n",
     "axs[0,0].set_title('Active Infected')\n",
     "axs[0,0].axvline(x = t_end, linestyle = 'dotted',color = 'grey')\n",
     "\n",
     "\n",
     "axs[0,1].set_xlim(0,days)\n",
-    "axs[0,1].plot(simulation2.t+tsim1,simulation2.I_d_det,label='sim2')\n",
     "axs[0,1].plot(simulation1.t,simulation1.I_d_det,label='sim1')\n",
     "axs[0,1].scatter(RM.I_d_r_tr,RM.I_d_r,label='Daily Real Data')\n",
     "axs[0,1].set_title('Daily infected')\n",
@@ -532,7 +514,6 @@
     "\n",
     "\n",
     "axs[0,2].set_xlim(0,days)\n",
-    "axs[0,2].plot(simulation2.t+tsim1,simulation2.I_ac_det,label='sim2')\n",
     "axs[0,2].plot(simulation1.t,simulation1.I_ac_det,label='sim1')\n",
     "axs[0,2].scatter(RM.I_ac_r_tr,RM.I_ac_r,label='Accumulated Real Data')\n",
     "axs[0,2].set_title('Accumulated Infected')\n",
@@ -540,7 +521,6 @@
     "\n",
     "\n",
     "axs[1,0].set_xlim(0,days)\n",
-    "axs[1,0].plot(simulation2.t+tsim1,simulation2.B,label='sim2')\n",
     "axs[1,0].plot(simulation1.t,simulation1.B,label='sim1')\n",
     "axs[1,0].scatter(RM.hosp_tr,RM.Br_hosp,label='Real Data')\n",
     "axs[1,0].set_title('Hospitalized Acmulated Deaths')\n",
@@ -549,34 +529,19 @@
     "\n",
     "axs[1,1].set_xlim(0,days)\n",
     "axs[1,1].plot(simulation1.t,simulation1.Hse+simulation1.Hout,label='UTI Beds')\n",
-    "axs[1,1].plot(simulation2.t+tsim1,simulation2.Hse+simulation2.Hout,label='UTI Beds')\n",
     "axs[1,1].scatter(RM.sochimi_tr,RM.UTI,label='Real Data')\n",
     "axs[1,1].plot(simulation1.t,simulation1.H_cap,label='Capacity', color = 'red')\n",
-    "axs[1,1].plot(simulation2.t+tsim1,simulation2.H_cap,label='Capacity', color = 'red')\n",
     "axs[1,1].set_title('UTI Usage')\n",
     "axs[1,1].axvline(x = t_end, linestyle = 'dotted',color = 'grey')\n",
     "\n",
     "\n",
     "axs[1,2].set_xlim(0,days)\n",
-    "axs[1,2].plot(simulation2.t+tsim1,simulation2.V,label='VSat sim2')\n",
     "axs[1,2].plot(simulation1.t,simulation1.V,label='Vsat sim1')\n",
     "axs[1,2].scatter(RM.sochimi_tr,RM.Vr,label='Real Data')\n",
     "axs[1,2].plot(simulation1.t,simulation1.V_cap,label='Capacity Data', color = 'red')\n",
-    "axs[1,2].plot(simulation2.t+tsim1,simulation2.V_cap,label='Capacity Data', color = 'red')\n",
     "axs[1,2].set_title('VMI Usage')\n",
     "axs[1,2].axvline(x = t_end, linestyle = 'dotted',color = 'grey')\n",
-    "\n",
-    "\n",
-    "#axs[2,1].plot(simulation2.t+tsim1,simulation2.V_D_d,label='V_D sim2')\n",
-    "#axs[2,1].plot(simulation2.t+tsim1,simulation2.Hse_D_d,label='Hse_D sim2')\n",
-    "#axs[2,1].plot(simulation2.t+tsim1,simulation2.Icr_D_d,label='Icr_D sim2')\n",
-    "#axs[2,1].plot(simulation2.t+tsim1,simulation2.Ise_D_d,label='Ise_D sim2')\n",
-    "#axs[2,1].plot(simulation1.t,simulation1.V_D_d,label='V_D sim1')\n",
-    "#axs[2,1].plot(simulation1.t,simulation1.Hse_D_d,label='Hse_D sim1')\n",
-    "#axs[2,1].plot(simulation1.t,simulation1.Icr_D_d,label='Icr_D sim1')\n",
-    "#axs[2,1].plot(simulation1.t,simulation1.Ise_D_d,label='Ise_D sim1')\n",
-    "#axs[2,1].set_title('Death by cause')\n",
-    "#axs[2,1].axvline(x = t_end, linestyle = 'dotted',color = 'grey')\n"
+    "\n"
    ]
   },
   {
@@ -590,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Daily new Infected"
+    "### SEIRD"
    ]
   },
   {
@@ -599,10 +564,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plt.plot(simulation2.t+tsim1,simulation2.I_d_det,label='sim2')\n",
-    "plt.plot(simulation1.t,simulation1.I_d_det,label='sim1')\n",
+    "plt.plot(simulation1.t,simulation1.S,label='S')\n",
+    "plt.plot(simulation1.t,simulation1.E,label='E')\n",
+    "plt.plot(simulation1.t,simulation1.I,label='I')\n",
+    "plt.plot(simulation1.t,simulation1.R,label='R')\n",
+    "plt.plot(simulation1.t,simulation1.B,label='B')\n",
+    "plt.axvline(x = t_end, linestyle = 'dotted',color = 'grey')\n",
+    "plt.title('SEIRD')\n",
     "plt.legend(loc=0)\n",
-    "plt.title('Daily New Infected')\n",
     "plt.show()"
    ]
   },
@@ -619,9 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation2.t+tsim1,simulation2.D,label='sim2')\n",
     "plt.plot(simulation1.t,simulation1.D,label='sim1')\n",
-    "plt.legend(loc=0)\n",
     "plt.title('Deaths')\n",
     "plt.show()"
    ]
@@ -639,10 +606,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation2.t+tsim1,simulation2.V_cap,label='VMI capacity sim2')\n",
     "plt.plot(simulation1.t,simulation1.V_cap,label='VMI capacity sim1')\n",
     "plt.plot(simulation1.t,simulation1.V,label='VMI sim1')\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.V,label='VMI sim2')\n",
     "plt.legend(loc=0)\n",
     "plt.title('VMI')\n",
     "plt.scatter(RM.sochimi_tr,RM.Vr,label='Real Data')\n",
@@ -663,10 +628,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation2.t+tsim1,simulation2.H_cap,label='sim2')\n",
     "plt.plot(simulation1.t,simulation1.H_cap,label='sim1')\n",
     "plt.plot(simulation1.t,simulation1.Hse+simulation1.Hout,label='UCI/UTI Beds')\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.Hse+simulation2.Hout,label='UCI/UTI Beds')\n",
     "plt.legend(loc=0)\n",
     "plt.title('Hospitalization')\n",
     "\n",
@@ -688,15 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation2.t+tsim1,simulation2.D,label='sim2')\n",
     "plt.plot(simulation1.t,simulation1.D,label='sim1')\n",
-    "\n",
-    "\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.V_D_d,label='V_D sim2')\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.Hse_D_d,label='Hse_D sim2')\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.Icr_D_d,label='Icr_D sim2')\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.Ise_D_d,label='Ise_D sim2')\n",
-    "\n",
     "plt.plot(simulation1.t,simulation1.V_D_d,label='V_D sim1')\n",
     "plt.plot(simulation1.t,simulation1.Hse_D_d,label='Hse_D sim1')\n",
     "plt.plot(simulation1.t,simulation1.Icr_D_d,label='Icr_D sim1')\n",
@@ -720,10 +675,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(simulation2.t+tsim1,simulation2.H_sat,label='HSat sim2')\n",
-    "plt.plot(simulation1.t,simulation1.H_sat,label='HSat sim1')\n",
-    "plt.plot(simulation2.t+tsim1,simulation2.V_sat,label='VSat sim2')\n",
-    "plt.plot(simulation1.t,simulation1.V_sat,label='Vsat sim1')\n",
+    "plt.plot(simulation1.t,simulation1.H_sat,label='HSat')\n",
+    "plt.plot(simulation1.t,simulation1.V_sat,label='Vsat')\n",
     "plt.legend(loc=0)\n",
     "plt.title('Saturation')\n",
     "plt.show()"
