--- a/DataFit/Calculo_Muertes_por_VMI.ipynb
+++ b/DataFit/Calculo_Muertes_por_VMI.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linux\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -50,26 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing General Data\n",
-      "Importing Population\n",
-      "Importing Active infected\n",
-      "Importing Accumulated Infected\n",
-      "Importing Daily Infected\n",
-      "Importing Sochimi Data 2\n",
-      "Importing Accumulated Deaths\n",
-      "Importing Active Infected by Minciencia\n",
-      "Importing Hospitalized/NonHospitalized Deaths\n",
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "initdate = datetime(2020,4,15)\n",
     "RM = ImportData(tstate = '13', initdate = initdate)\n",
@@ -78,25 +53,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "VMI = RM.VMI\n",
     "tr = RM.sochimi_tr\n",
-    "Tarray = [5,10,15]\n",
-    "T0 = [np.where(np.array(tr)>=T[i])[0][0] for i in range(len(T))]"
+    "T = [5,10,15]\n",
+    "T0 = [np.where(np.array(tr)>=T[i])[0][0] for i in range(len(T))]\n",
+    "\n",
+    "# VMI Death probability\n",
+    "p_VD = 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "D = []\n",
     "D_t = []\n",
-    "p_VD = 0.5\n",
+    "\n",
     "for j in range(len(T)):\n",
     "    aux_D = []\n",
     "    aux_t = []\n",
@@ -116,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,24 +111,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f53872556a0>"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(len(D)):\n",
     "    plt.plot(D_t[i],D_ac[i], label='Muertos estimados VMI - Time Delta: '+str(T[i]))\n",
-    "plt.plot(RM.Br_tr,RM.Br, label = 'Muertos Acumulados MinCiencia')\n",
+    "plt.scatter(RM.Br_tr,RM.Br, label = 'Muertos Acumulados MinCiencia')\n",
     "plt.legend(loc=0)"
    ]
   },
