--- a/DataFit/Calculo_Muertes_por_VMI.ipynb
+++ b/DataFit/Calculo_Muertes_por_VMI.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Windows\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,18 +50,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Importing General Data\n",
+      "Importing Population\n",
+      "Importing Active infected\n",
+      "Importing Accumulated Infected\n",
+      "Importing Daily Infected\n",
+      "Importing Sochimi Data 2\n",
+      "Importing Accumulated Deaths\n",
+      "Importing Active Infected by Minciencia\n",
+      "Importing Hospitalized/NonHospitalized Deaths\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "initdate = datetime(2020,4,15)\n",
+    "initdate = datetime(2020,4,1)\n",
     "RM = ImportData(tstate = '13', initdate = initdate)\n",
     "RM.importdata()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +88,12 @@
     "T0 = [np.where(np.array(tr)>=T[i])[0][0] for i in range(len(T))]\n",
     "\n",
     "# VMI Death probability\n",
-    "p_VD = 0.1"
+    "p_VD = 0.08"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,9 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x26d55cd01f0>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for i in range(len(D)):\n",
     "    plt.plot(D_t[i],D_ac[i], label='Muertos estimados VMI - Time Delta: '+str(T[i]))\n",
@@ -127,13 +163,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38264bit48ae65e862f64697a29185f9fa581b02"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -145,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
