parametros ajuste OK

--- a/DataFit/.ipynb
+++ b/DataFit/.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,12 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Quarantines \n",
-    "max_mob = 0.82\n",
+    "max_mob = 0.85\n",
     "rem_mob = 0.45\n",
     "\n",
     "Q1 = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=t_sp)\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,14 +319,14 @@
     "pIcr_D = 1.0  # Transition from Serious Infected to Death (When Ventilators capacity is saturated)\n",
     "tIcr_D = 3.0\n",
     "pHse_R = 0.97 # Transition from Serious Hospitalized to Recovered\n",
-    "tHse_R = 3\n",
+    "tHse_R = 3.5\n",
     "pHse_V = 0.03# Transition from Serious Hospitalized to Ventilators (When Ventilators capacity is not saturated)\n",
     "tHse_V = 4.0\n",
     "pHse_D = 0.85# Transition from Serious Hospitalized to Death (When Ventilators capacity is saturated)\n",
     "tHse_D = 4.0\n",
-    "pV_Hout = 0.55  # Transition from Ventilators to Hospital Recovery (Hout)\n",
+    "pV_Hout = 0.45  # Transition from Ventilators to Hospital Recovery (Hout)\n",
     "tV_Hout = 16.0\n",
-    "pV_D = 0.45 # Transition from Ventilators to Death\n",
+    "pV_D = 0.55 # Transition from Ventilators to Death\n",
     "tV_D = 12.0\n",
     "pHout_R = 1.0 # Transition from Hospital Recovery (Hout) to Recovered\n",
     "tHout_R = 10.0"
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Days for susceptible increase\n",
     "#renewalFactor=0.6\n",
-    "initincrease=10\n",
+    "initincrease=0\n",
     "increasedays =initincrease+45\n",
     "# Daily amount of people\n",
     "dailyincrease = [RM.population*SeroPrevFactor*i/increasedays for i in renewalFactor]"
@@ -395,25 +395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chi = [SeroPrevDynamics(t_sp,t_sp+increasedays*0.7,t_sp+increasedays,i) for i in dailyincrease]"
+    "chi = [SeroPrevDynamics(t_sp,t_sp+increasedays*0.4,t_sp+increasedays,i) for i in dailyincrease]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x19692de11c0>"
+       "<matplotlib.legend.Legend at 0x18931fcd220>"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -479,6 +479,44 @@
       "Compartimental model State parameters changed\n",
       "Compartimental model State parameters changed\n",
       "Compartimental model State parameters changed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\backends\\backend_qt5.py\", line 496, in _draw_idle\n",
+      "    self.draw()\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\backends\\backend_agg.py\", line 393, in draw\n",
+      "    self.figure.draw(self.renderer)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\artist.py\", line 38, in draw_wrapper\n",
+      "    return draw(artist, renderer, *args, **kwargs)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\figure.py\", line 1735, in draw\n",
+      "    mimage._draw_list_compositing_images(\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\image.py\", line 137, in _draw_list_compositing_images\n",
+      "    a.draw(renderer)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\artist.py\", line 38, in draw_wrapper\n",
+      "    return draw(artist, renderer, *args, **kwargs)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\axes\\_base.py\", line 2630, in draw\n",
+      "    mimage._draw_list_compositing_images(renderer, self, artists)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\image.py\", line 137, in _draw_list_compositing_images\n",
+      "    a.draw(renderer)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\artist.py\", line 38, in draw_wrapper\n",
+      "    return draw(artist, renderer, *args, **kwargs)\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\axis.py\", line 1227, in draw\n",
+      "    ticks_to_draw = self._update_ticks()\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\axis.py\", line 1103, in _update_ticks\n",
+      "    major_locs = self.get_majorticklocs()\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\axis.py\", line 1348, in get_majorticklocs\n",
+      "    return self.major.locator()\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\dates.py\", line 1338, in __call__\n",
+      "    self.refresh()\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\dates.py\", line 1364, in refresh\n",
+      "    dmin, dmax = self.viewlim_to_dt()\n",
+      "  File \"D:\\Usuarios\\tvelozg\\Anaconda3\\lib\\site-packages\\matplotlib\\dates.py\", line 1094, in viewlim_to_dt\n",
+      "    raise ValueError('view limit minimum {} is less than 1 and '\n",
+      "ValueError: view limit minimum 0.0 is less than 1 and is an invalid Matplotlib date value. This often happens if you pass a non-datetime value to an axis that has datetime units\n"
      ]
     }
    ],
@@ -538,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -557,11 +595,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    4.6s\n",
-      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    4.7s remaining:    7.1s\n",
-      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    4.9s remaining:    3.2s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.0s finished\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    4.3s remaining:    6.5s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    4.3s remaining:    2.9s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    6.6s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    6.6s finished\n",
       "ready\n"
      ]
     }
@@ -589,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,16 +666,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x19694f949d0>"
+       "<matplotlib.legend.Legend at 0x18938d0bb50>"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,20 +736,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.049139806903957216,\n",
-       " 0.05332930783462643,\n",
-       " 0.05750514367142015,\n",
-       " 0.06172510689577991,\n",
-       " 0.065943177144003]"
+       "[0.05011586540191056,\n",
+       " 0.05527300024222186,\n",
+       " 0.06042458795857955,\n",
+       " 0.06560629457612131,\n",
+       " 0.07077942070911006]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
