--- a/DataFit/COVID19 Data Analysis.ipynb
+++ b/DataFit/COVID19 Data Analysis.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "8125072.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,149 +128,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[338.0,\n",
-       " 339.0,\n",
-       " 354.0,\n",
-       " 353.0,\n",
-       " 367.0,\n",
-       " 375.0,\n",
-       " 388.0,\n",
-       " 379.0,\n",
-       " 373.0,\n",
-       " 400.0,\n",
-       " 410.0,\n",
-       " 437.0,\n",
-       " 519.0,\n",
-       " 534.0,\n",
-       " 553.0,\n",
-       " 588.0,\n",
-       " 662.0,\n",
-       " 699.0,\n",
-       " 711.0,\n",
-       " 754.0,\n",
-       " 802.0,\n",
-       " 842.0,\n",
-       " 867.0,\n",
-       " 885.0,\n",
-       " 918.0,\n",
-       " 964.0,\n",
-       " 1038.0,\n",
-       " 1076.0,\n",
-       " 1087.0,\n",
-       " 1108.0,\n",
-       " 1126.0,\n",
-       " 1140.0,\n",
-       " 1154.0,\n",
-       " 1186.0,\n",
-       " 1200.0,\n",
-       " 1234.0,\n",
-       " 1241.0,\n",
-       " 1231.0,\n",
-       " 1220.0,\n",
-       " 1260.0,\n",
-       " 1287.0,\n",
-       " 1299.0,\n",
-       " 1312.0,\n",
-       " 1304.0,\n",
-       " 1322.0,\n",
-       " 1343.0,\n",
-       " 1363.0,\n",
-       " 1346.0,\n",
-       " 1346.0,\n",
-       " 1358.0,\n",
-       " 1387.0,\n",
-       " 1355.0,\n",
-       " 1385.0,\n",
-       " 1411.0,\n",
-       " 1389.0,\n",
-       " 1379.0,\n",
-       " 1389.0,\n",
-       " 1409.0,\n",
-       " 1396.0,\n",
-       " 1396.0,\n",
-       " 1380.0,\n",
-       " 1369.0,\n",
-       " 1381.0,\n",
-       " 1359.0,\n",
-       " 1364.0,\n",
-       " 1377.0,\n",
-       " 1338.0,\n",
-       " 1349.0,\n",
-       " 1314.0,\n",
-       " 1312.0,\n",
-       " 1291.0,\n",
-       " 1265.0,\n",
-       " 1266.0,\n",
-       " 1269.0,\n",
-       " 1273.0,\n",
-       " 1251.0,\n",
-       " 1218.0,\n",
-       " 1178.0,\n",
-       " 1152.0,\n",
-       " 1161.0,\n",
-       " 1164.0,\n",
-       " 1142.0,\n",
-       " 1170.0,\n",
-       " 1089.0,\n",
-       " 1036.0,\n",
-       " 1057.0,\n",
-       " 1025.0,\n",
-       " 1016.0,\n",
-       " 995.0,\n",
-       " 989.0,\n",
-       " 970.0,\n",
-       " 967.0,\n",
-       " 955.0,\n",
-       " 920.0,\n",
-       " 920.0,\n",
-       " 891.0,\n",
-       " 885.0,\n",
-       " 867.0,\n",
-       " 846.0,\n",
-       " 840.0,\n",
-       " 812.0,\n",
-       " 806.0,\n",
-       " 779.0,\n",
-       " 748.0,\n",
-       " 723.0,\n",
-       " 720.0,\n",
-       " 724.0,\n",
-       " 699.0,\n",
-       " 686.0,\n",
-       " 692.0,\n",
-       " 679.0,\n",
-       " 666.0,\n",
-       " 662.0,\n",
-       " 652.0,\n",
-       " 631.0,\n",
-       " 650.0,\n",
-       " 627.0,\n",
-       " 633.0,\n",
-       " 635.0,\n",
-       " 616.0,\n",
-       " 621.0,\n",
-       " 612.0,\n",
-       " 603.0,\n",
-       " 624.0,\n",
-       " 625.0,\n",
-       " 622.0,\n",
-       " 613.0,\n",
-       " 602.0,\n",
-       " 578.0,\n",
-       " 580.0,\n",
-       " 592.0,\n",
-       " 589.0]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-2388b07c9f1c>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-2388b07c9f1c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    VMI_ac = [RM.VMI[]\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -296,9 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7fecf4e7ee80>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_tr,RM.VMI,label='VMI')\n",
     "plt.plot(RM.sochimi_tr,RM.VMI_tot,label='VMI_tot')\n",
@@ -310,9 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 1.0, 'UCI vs UTI - RM')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_tr,RM.UTI,label='UTI', color = 'blue')\n",
     "plt.plot(RM.sochimi_tr,RM.UTI_tot,label='UTI_tot',linestyle = 'dashed', color = 'blue')\n",
@@ -324,23 +213,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7fecf4b5cdc0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "plt.plot(RM.sochimi_tr,RM.UTI,label='UTI', color = 'blue')\n",
-    "plt.plot(RM.sochimi_tr,RM.UTI_tot,label='UTI_tot',linestyle = 'dashed', color = 'blue')\n",
+    "plt.plot(RM.sochimi_tr,RM.UCI,label='UCI', color = 'blue')\n",
+    "plt.plot(RM.sochimi_tr,RM.UCI_tot,label='UCI_tot',linestyle = 'dashed', color = 'blue')\n",
     "plt.plot(RM.sochimi_tr,RM.VMI,label='VMI', color = 'red')\n",
     "plt.plot(RM.sochimi_tr,RM.VMI_tot,label='VMI_tot',linestyle = 'dashed', color = 'red')\n",
-    "plt.title('VMI vs UTI - RM')\n",
+    "plt.title('VMI vs UCI - RM')\n",
     "plt.legend(loc=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.legend.Legend at 0x7efefd465a60>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_tr,RM.UTI,label='UTI', color = 'blue')\n",
     "plt.plot(RM.sochimi_tr,RM.UTI_tot,label='UTI_tot',linestyle = 'dashed', color = 'blue')\n",
@@ -354,9 +265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2020, 9, 20, 0, 0)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "RM.sochimi_dates[-1]"
    ]
@@ -372,9 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'VMI_UTI' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-828ab6f2b9a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRM\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msochimi_dates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mVMI_UTI\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'VMI/UTI'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRM\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msochimi_dates\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mVMI_UTI\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'VMI/UTI'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'VMI UTI UCI rates - RM'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'VMI_UTI' is not defined"
+     ]
+    }
+   ],
    "source": [
     "plt.plot(RM.sochimi_dates,VMI_UTI,label='VMI/UTI')\n",
     "plt.plot(RM.sochimi_dates,VMI_UTI,label='VMI/UTI')\n",
@@ -642,6 +576,371 @@
     "plt.plot(hosp_dates,V_F)\n",
     "plt.title('Proporción Muertes de No Hospitalizados / Muertes de Hospitalizados')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sigmoid study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.special import expit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9820137900379085"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "expit(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def SeroPrevDynamics(t0,t1,t2,dailyincrease = 1,form='sigmoid'):\n",
+    "    \"\"\"\n",
+    "    Sero Prevalence Dynamics Function generator\n",
+    "    \"\"\"\n",
+    "    if not  'sigmoid' in form:\n",
+    "        def f(t):\n",
+    "            return(np.poly1d(np.polyfit([t0,t1],[0,dailyincrease],1))(t))\n",
+    "    else:\n",
+    "        def f(t):\n",
+    "            return(dailyincrease*expit((t-t0)*4/(t1-t0)))\n",
+    "\n",
+    "    def chi(t):\n",
+    "        return f(t)*(expit(10*(t-t0)) - expit(10*(t-t1))) + dailyincrease*(expit(10*(t-t1)) - expit(10*(t-t2)))\n",
+    "      \n",
+    "    return chi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def f(t):\n",
+    "        return(np.poly1d(np.polyfit([t0,t1],[0,dailyincrease],1))(t))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi1 = SeroPrevDynamics(10,20,30,10, form = 'line')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi2 =  SeroPrevDynamics(10,20,30,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chi1plot = [chi1(t) for t in range(100)]\n",
+    "chi2plot = [chi2(t) for t in range(100)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7efefb8dd3d0>]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(range(100),chi1plot)\n",
+    "plt.plot(range(100),chi2plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig = [expit(t) for t in range(-10,10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7efefb50ddf0>]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(sig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(t):\n",
+    "    return(dailyincrease*expit((t-t0-4)*8/(t1-t0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t0 = 10\n",
+    "t1 = 30\n",
+    "t2 = 50\n",
+    "dailyincrease = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chi(t):\n",
+    "    return dailyincrease*(expit((t-t0-4)*8/(t1-t0)) - expit(10*(t-t2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig2 = [f(t) for t in range(50)]\n",
+    "sig3 = [chi(t) for t in np.arange(0,60,0.01)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7efefa64de20>]"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(np.arange(0,60,0.01),sig3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.983411989198256"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.999484579566953"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi(29)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.933030305039702"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi(29.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.polyfit([t0,t1,2*t0-t1],[0,dailyincrease,dailyincrease],2)\n",
+    "def g(t):\n",
+    "    return np.poly1d(a)(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig4 = [g(t) for t in np.arange(0,60,0.01)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7efefbe06580>]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(np.arange(0,60,0.01),sig4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Quarantine import SeroPrevDynamics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = SeroPrevDynamics(10,20,30,10,'quadratic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig5 = [h(t) for t in np.arange(0,60,0.01)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7efef8c8ad30>]"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.plot(np.arange(0,60,0.01),sig5)"
    ]
   },
   {
