--- a/DataFit/SEIRHVD5_Datafit_SPDynamics_Parallel.ipynb
+++ b/DataFit/SEIRHVD5_Datafit_SPDynamics_Parallel.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Windows\n"
+      "Linux\n"
      ]
     }
    ],
@@ -71,21 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First simulation Initial date\n",
     "initdate = datetime(2020,5,15)\n",
     "# Date for change in SeroPrevalence\n",
-    "SPchange_date = datetime(2020,8,24)\n",
+    "SPchange_date = datetime(2020,8,14)\n",
     "\n",
     "# Current date\n",
     "currentdate = datetime.now()\n",
     "currentday = (currentdate - initdate).days\n",
     "\n",
     "fiestaspatrias = datetime(2020,9,18)\n",
-    "plebiscito = datetime(2020,10,25)"
+    "fiestaspatrias_day = (fiestaspatrias-initdate).days\n",
+    "plebiscito = datetime(2020,10,25)\n",
+    "plebiscito_day = (plebiscito-initdate).days"
    ]
   },
   {
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -137,12 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#RM.Hr = np.array(RM.UCI) + np.array(RM.UTI)\n",
-    "#RM.Hr_tot = np.array(RM.UCI_tot) + np.array(RM.UTI_tot)\n",
     "RM.Hr = np.array(RM.UTI)\n",
     "RM.Hr_tot = np.array(RM.UTI_tot)"
    ]
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,12 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Quarantines \n",
-    "max_mob = 0.82\n",
+    "max_mob = 0.85\n",
     "rem_mob = 0.45\n",
     "\n",
     "Q1 = Quarantine(rem_mob,max_mob,qp=0,iqt=0,fqt=t_sp)\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,14 +319,14 @@
     "pIcr_D = 1.0  # Transition from Serious Infected to Death (When Ventilators capacity is saturated)\n",
     "tIcr_D = 3.0\n",
     "pHse_R = 0.97 # Transition from Serious Hospitalized to Recovered\n",
-    "tHse_R = 3\n",
+    "tHse_R = 3.5\n",
     "pHse_V = 0.03# Transition from Serious Hospitalized to Ventilators (When Ventilators capacity is not saturated)\n",
     "tHse_V = 4.0\n",
     "pHse_D = 0.85# Transition from Serious Hospitalized to Death (When Ventilators capacity is saturated)\n",
     "tHse_D = 4.0\n",
-    "pV_Hout = 0.55  # Transition from Ventilators to Hospital Recovery (Hout)\n",
+    "pV_Hout = 0.45  # Transition from Ventilators to Hospital Recovery (Hout)\n",
     "tV_Hout = 16.0\n",
-    "pV_D = 0.45 # Transition from Ventilators to Death\n",
+    "pV_D = 0.55 # Transition from Ventilators to Death\n",
     "tV_D = 12.0\n",
     "pHout_R = 1.0 # Transition from Hospital Recovery (Hout) to Recovered\n",
     "tHout_R = 10.0"
@@ -343,36 +343,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 192,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t_sp = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Days for susceptible increase\n",
-    "increasedays = 15\n",
-    "# Daily amount of people \n",
-    "dailyincrease = 2000"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case we add 30.000 persons to the simulation"
+    "#### First Susceptibles increase 2020-08-24"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chisum(a,b):\n",
+    "    def aux(t):\n",
+    "        return a(t)+b(t)\n",
+    "    return aux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "increasedays = (fiestaspatrias - SPchange_date).days + 1\n",
+    "renewalFactor = 0.23\n",
+    "dailyincrease = RM.population*SeroPrevFactor*renewalFactor/increasedays\n",
+    "chi0 = SeroPrevDynamics(t_sp,t_sp+increasedays*0.9,t_sp+increasedays,dailyincrease,form='line')\n",
+    "#chi0 = SeroPrevDynamics(t_sp,t_sp+increasedays*1,t_sp+increasedays,dailyincrease,'quadratic',df = 1)\n",
+    "chi = [chi0]\n",
+    "#renewalFactor = [renewalFactor]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,48 +387,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Days for susceptible increase\n",
-    "#renewalFactor=0.6\n",
-    "initincrease=10\n",
-    "increasedays =initincrease+45\n",
+    "increasedays = 50\n",
     "# Daily amount of people\n",
     "dailyincrease = [RM.population*SeroPrevFactor*i/increasedays for i in renewalFactor]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chi = [SeroPrevDynamics(t_sp,t_sp+increasedays*0.7,t_sp+increasedays,i) for i in dailyincrease]"
+    "chi = [chisum(chi0,SeroPrevDynamics(fiestaspatrias_day-3,fiestaspatrias_day+increasedays*0.0001,fiestaspatrias_day+increasedays,i)) for i in dailyincrease]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x19692de11c0>"
+       "<matplotlib.legend.Legend at 0x7fa02ba441f0>"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chiplot = [[chi[i](t) for t in range(tsim)] for i in range(len(renewalFactor))]\n",
+    "chiplot = [[chi[i](t) for t in np.arange(0,tsim,0.1)] for i in range(len(renewalFactor))]\n",
     "plt.title('Sero Prevalence Dynamics')\n",
     "for i in range(len(chiplot)):\n",
-    "    plt.plot(range(tsim),chiplot[i],label='RenewalFactor: '+str(renewalFactor[i]))\n",
+    "    plt.plot(np.arange(0,tsim,0.1),chiplot[i],label='RenewalFactor: '+str(renewalFactor[i]))\n",
+    "plt.axvline(x = t_sp, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
+    "plt.axvline(x = fiestaspatrias_day, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
+    "plt.axvline(x = plebiscito_day, linestyle = 'dotted',color = 'blue',label='Plebiscito')    \n",
     "plt.xlim(0,200)\n",
     "plt.legend(loc=0)"
    ]
@@ -439,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -557,11 +564,11 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    4.6s\n",
-      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    4.7s remaining:    7.1s\n",
-      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    4.9s remaining:    3.2s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    5.0s finished\n",
+      "[Parallel(n_jobs=8)]: Done   1 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=8)]: Done   2 out of   5 | elapsed:    1.6s remaining:    2.4s\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   5 | elapsed:    2.4s remaining:    1.6s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    3.3s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done   5 out of   5 | elapsed:    3.3s finished\n",
       "ready\n"
      ]
     }
@@ -589,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,16 +635,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x19694f949d0>"
+       "<matplotlib.legend.Legend at 0x7fa02b60aac0>"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +653,7 @@
     "fig, axs = plt.subplots(2, 2)\n",
     "\n",
     "for i in range(len(simulation)):\n",
-    "    axs[0,0].plot(dates[i],simulation[i].I_ac_det,label='RF: '+str(renewalFactor[i])+' SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
+    "    axs[0,0].plot(dates[i],simulation[i].I_ac_det,label='RF: '+str(renewalFactor[i])+' | SP_R: '+str(round(100*SeroPrevalence[i],2))+'%'+' | SP_D:'+str(round(100*SeroPrevalenceDet[i],2))+'%',color=colors[i])\n",
     "axs[0,0].set_title('Accumulated Infected')\n",
     "axs[0,0].set_xlim(initdate,datetime(2020,12,31))\n",
     "axs[0,0].scatter(RM.I_ac_r_dates,RM.I_ac_r)\n",
@@ -666,6 +673,7 @@
     "axs[0,1].set_title('Hospitalized Accumulated Deaths')\n",
     "axs[0,1].set_xlim(initdate,datetime(2020,12,31))\n",
     "axs[0,1].scatter(RM.hosp_dates,RM.Br_hosp)\n",
+    "axs[0,1].scatter(RM.hosp_dates,RM.Br_Nonhosp,color = 'red')\n",
     "axs[0,1].axvline(x = SPchange_date, linestyle = 'dotted',color = 'grey',label='Inicio Apertura')\n",
     "axs[0,1].axvline(x = fiestaspatrias, linestyle = 'dotted',color = 'red',label='18 Sept')\n",
     "axs[0,1].axvline(x = plebiscito, linestyle = 'dotted',color = 'blue',label='Plebiscito')\n",
@@ -698,20 +706,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.049139806903957216,\n",
-       " 0.05332930783462643,\n",
-       " 0.05750514367142015,\n",
-       " 0.06172510689577991,\n",
-       " 0.065943177144003]"
+       "[0.05557881428516175,\n",
+       " 0.06189471858561066,\n",
+       " 0.06823094173130775,\n",
+       " 0.07456340766203999,\n",
+       " 0.08087197948181081]"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,21 +744,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'simulation1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-264-a17122358488>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mS\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'S'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mE\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'E'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mI\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'I'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mR\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'R'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msimulation1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mB\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'B'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'simulation1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(simulation1.t,simulation1.S,label='S')\n",
     "plt.plot(simulation1.t,simulation1.E,label='E')\n",
@@ -926,9 +922,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38264bit48ae65e862f64697a29185f9fa581b02"
   },
   "language_info": {
    "codemirror_mode": {
@@ -940,7 +936,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
